--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build:cjs": "tsc -p ./tsconfig.cjs.json",
     "build:esbuild": "rimraf dist && node esbuild.js && tsc -p ./tsconfig.esbuild.json",
     "test": "npx jest --verbose --runInBand --passWithNoTests",
-    "test:ci": "npx jest --verbose --ci",
+    "test:ci": "npx jest --ci --coverage",
     "semantic-release": "semantic-release",
     "prepack": "npm run build:esbuild"
   },
