Fixes and better playwright tests

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build": "npm run clean && npm run build:esm && npm run build:cjs",
     "build:esm": "tsc -p ./tsconfig.esm.json && move-file lib/esm/index.js lib/esm/index.mjs",
     "build:cjs": "tsc -p ./tsconfig.cjs.json",
-    "build:esbuild": "rimraf dist && node esbuild.js && tsc -p ./tsconfig.esbuild.json",
+    "build:esbuild": "rimraf dist && node esbuild.js && tsc -p ./tsconfig.esbuild.json && shx cp dist/index.js e2e/index.js",
+    "build:e2e": "yarn run build:cjs && browserify -r ./lib/cjs/index.js:rangee > ./e2e/index.js",
     "test": "npx jest --verbose --runInBand --passWithNoTests",
     "test:ci": "npx jest --ci --coverage",
     "semantic-release": "semantic-release",
@@ -65,6 +66,7 @@
     "@types/jest": "29.5.12",
     "@types/jsdom": "21.1.7",
     "@types/node": "20.8.4",
+    "browserify": "^17.0.0",
     "esbuild": "^0.23.0",
     "esbuild-node-externals": "^1.14.0",
     "jest": "29.7.0",
@@ -72,6 +74,7 @@
     "move-file-cli": "3.0.0",
     "rimraf": "6.0.1",
     "semantic-release": "24.0.0",
+    "shx": "0.3.4",
     "ts-jest": "29.2.4",
     "ts-node": "10.9.2",
     "typescript": "5.5.4"
