--- a/package.json
+++ b/package.json
@@ -1,82 +1,98 @@
 {
-  "name": "rangee",
-  "version": "1.1.7",
-  "description": "Serialize/deserialize Range in HTML.",
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./lib/esm/types/index.d.ts",
-        "default": "./lib/esm/index.mjs"
-      },
-      "require": {
-        "types": "./lib/cjs/types/index.d.ts",
-        "default": "./lib/cjs/index.js"
-      }
+    "name": "rangee",
+    "version": "1.1.7",
+    "description": "Serialize/deserialize Range in HTML.",
+    "exports": {
+        ".": {
+            "import": {
+                "types": "./lib/esm/types/index.d.ts",
+                "default": "./lib/esm/index.mjs"
+            },
+            "require": {
+                "types": "./lib/cjs/types/index.d.ts",
+                "default": "./lib/cjs/index.js"
+            }
+        }
+    },
+    "types": "./dist",
+    "main": "./dist/index.js",
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "clean": "rimraf ./lib ./dist",
+        "build": "npm run clean && npm run build:esm && npm run build:cjs",
+        "build:esm": "tsc -p ./tsconfig.esm.json && move-file lib/esm/index.js lib/esm/index.mjs",
+        "build:cjs": "tsc -p ./tsconfig.cjs.json",
+        "build:esbuild": "rimraf dist && node esbuild.js && tsc -p ./tsconfig.esbuild.json && shx cp dist/index.js e2e/index.js",
+        "build:e2e": "yarn run build:cjs && browserify -r ./lib/cjs/index.js:rangee > ./e2e/index.js",
+        "lint": "eslint . --ext .ts",
+        "test": "npx jest --verbose --runInBand --passWithNoTests",
+        "test:ci": "npx jest --ci --coverage",
+        "semantic-release": "semantic-release",
+        "prepack": "npm run build:esbuild"
+    },
+    "release": {
+        "branches": [
+            "master"
+        ]
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/LukasRada/rangee.git"
+    },
+    "keywords": [
+        "range",
+        "serialize",
+        "deserialize",
+        "mark",
+        "highlight",
+        "store",
+        "HTML",
+        "DOM"
+    ],
+    "author": "LukasRada",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/LukasRada/rangee/issues"
+    },
+    "resolutions": {
+        "string-width": "4.2.3"
+    },
+    "dependencies": {
+        "lz-string": "1.5.0"
+    },
+    "devDependencies": {
+        "@playwright/test": "^1.45.3",
+        "@types/jest": "29.5.12",
+        "@types/jsdom": "21.1.7",
+        "@types/node": "20.8.4",
+        "@typescript-eslint/eslint-plugin": "7.6.0",
+        "@typescript-eslint/parser": "7.6.0",
+        "browserify": "^17.0.0",
+        "esbuild": "^0.23.0",
+        "esbuild-node-externals": "^1.14.0",
+        "eslint": "8.57.0",
+        "eslint-config-airbnb": "19.0.4",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-config-standard": "17.1.0",
+        "eslint-import-resolver-node": "0.3.9",
+        "eslint-import-resolver-typescript": "3.6.1",
+        "eslint-plugin-import": "2.29.1",
+        "eslint-plugin-jsx-a11y": "6.8.0",
+        "eslint-plugin-n": "16.6.2",
+        "eslint-plugin-prettier": "5.1.3",
+        "eslint-plugin-promise": "6.1.1",
+        "jest": "29.7.0",
+        "jsdom": "24.1.1",
+        "move-file-cli": "3.0.0",
+        "prettier": "3.2.5",
+        "prettier-eslint": "16.3.0",
+        "rimraf": "6.0.1",
+        "semantic-release": "24.0.0",
+        "shx": "0.3.4",
+        "ts-jest": "29.2.4",
+        "ts-node": "10.9.2",
+        "typescript": "5.5.4"
     }
-  },
-  "types": "./dist",
-  "main": "./dist/index.js",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "clean": "rimraf ./lib ./dist",
-    "build": "npm run clean && npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc -p ./tsconfig.esm.json && move-file lib/esm/index.js lib/esm/index.mjs",
-    "build:cjs": "tsc -p ./tsconfig.cjs.json",
-    "build:esbuild": "rimraf dist && node esbuild.js && tsc -p ./tsconfig.esbuild.json && shx cp dist/index.js e2e/index.js",
-    "build:e2e": "yarn run build:cjs && browserify -r ./lib/cjs/index.js:rangee > ./e2e/index.js",
-    "test": "npx jest --verbose --runInBand --passWithNoTests",
-    "test:ci": "npx jest --ci --coverage",
-    "semantic-release": "semantic-release",
-    "prepack": "npm run build:esbuild"
-  },
-  "release": {
-    "branches": [
-      "master"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LukasRada/rangee.git"
-  },
-  "keywords": [
-    "range",
-    "serialize",
-    "deserialize",
-    "mark",
-    "highlight",
-    "store",
-    "HTML",
-    "DOM"
-  ],
-  "author": "LukasRada",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/LukasRada/rangee/issues"
-  },
-  "resolutions": {
-    "string-width": "4.2.3"
-  },
-  "dependencies": {
-    "lz-string": "1.5.0"
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.45.3",
-    "@types/jest": "29.5.12",
-    "@types/jsdom": "21.1.7",
-    "@types/node": "20.8.4",
-    "browserify": "^17.0.0",
-    "esbuild": "^0.23.0",
-    "esbuild-node-externals": "^1.14.0",
-    "jest": "29.7.0",
-    "jsdom": "24.1.1",
-    "move-file-cli": "3.0.0",
-    "rimraf": "6.0.1",
-    "semantic-release": "24.0.0",
-    "shx": "0.3.4",
-    "ts-jest": "29.2.4",
-    "ts-node": "10.9.2",
-    "typescript": "5.5.4"
-  }
 }
