--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,43 +1,59 @@
 name: Build Rangee
 run-name: 🏗️ ${{ github.event.head_commit.message }}
+env:
+    PLAYWRIGHT_VERSION:
 on:
-  workflow_call:
-  push:
-    branches:
-      - "*"
-    tags-ignore:
-      - "*"
+    workflow_call:
+    push:
+        branches:
+            - '*'
+        tags-ignore:
+            - '*'
 jobs:
-  Build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Install node and yarn
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-          cache: "yarn"
-          cache-dependency-path: "yarn.lock"
-      - name: Install deps
-        run: yarn install --frozen-lockfile
-      - name: Run unit tests
-        run: yarn test:ci
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-      - name: Run build script
-        run: yarn build
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-      - name: Run Playwright tests
-        run: |
-          yarn build:e2e
-          npx playwright test
-      - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
+    Build:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+            - name: Install node and yarn
+              uses: actions/setup-node@v4
+              with:
+                  node-version-file: '.nvmrc'
+                  cache: 'yarn'
+                  cache-dependency-path: 'yarn.lock'
+            - name: Install deps
+              run: yarn install --frozen-lockfile
+            - name: Run lint
+              run: yarn lint
+            - name: Run unit tests
+              run: yarn test:ci
+            - name: Upload coverage to Codecov
+              uses: codecov/codecov-action@v4
+              with:
+                  token: ${{ secrets.CODECOV_TOKEN }}
+            - name: Run build script
+              run: yarn build
+            - name: Store Playwright's Version
+              run: |
+                  PLAYWRIGHT_VERSION=$(npm ls @playwright/test | grep @playwright | sed 's/.*@//')
+                  echo "Playwright's Version: $PLAYWRIGHT_VERSION"
+                  echo "PLAYWRIGHT_VERSION=$PLAYWRIGHT_VERSION" >> $GITHUB_ENV
+            - name: Cache Playwright Browsers for Playwright's Version
+              id: cache-playwright-browsers
+              uses: actions/cache@v4
+              with:
+                  path: ~/.cache/playwright
+                  key: playwright-browsers-${{ env.PLAYWRIGHT_VERSION }}
+            - name: Setup Playwright
+              if: steps.cache-playwright-browsers.outputs.cache-hit != 'true'
+              run: npx playwright install --with-deps
+            - name: Run Playwright tests
+              run: |
+                  yarn build:e2e
+                  npx playwright test
+            - uses: actions/upload-artifact@v4
+              if: ${{ !cancelled() }}
+              with:
+                  name: playwright-report
+                  path: playwright-report/
+                  retention-days: 30
