--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,7 +42,7 @@ jobs:
               id: cache-playwright-browsers
               uses: actions/cache@v4
               with:
-                  path: ~/.cache/playwright
+                  path: ~/.cache/ms-playwright
                   key: playwright-browsers-${{ env.PLAYWRIGHT_VERSION }}
             - name: Setup Playwright
               if: steps.cache-playwright-browsers.outputs.cache-hit != 'true'
