--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rangee",
-    "version": "1.1.7",
+    "version": "1.2.3",
     "description": "Serialize/deserialize Range in HTML.",
     "exports": {
         ".": {
@@ -14,10 +14,11 @@
             }
         }
     },
-    "types": "./dist",
-    "main": "./dist/index.js",
+    "module": "./lib/esm/index.mjs",
+    "types": "./lib/esm/types/index.d.ts",
+    "main": "./lib/esm/index.js",
     "files": [
-        "dist"
+        "lib"
     ],
     "scripts": {
         "clean": "rimraf ./lib ./dist",
@@ -30,7 +31,7 @@
         "test": "npx jest --verbose --runInBand --passWithNoTests",
         "test:ci": "npx jest --ci --coverage",
         "semantic-release": "semantic-release",
-        "prepack": "npm run build:esbuild"
+        "prepack": "npm run build"
     },
     "release": {
         "branches": [
