--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,20 +23,18 @@ jobs:
               run: yarn install --frozen-lockfile
             - name: Run lint
               run: yarn lint
+            - name: Run build
+              run: yarn build
             - name: Run unit tests
-              run: yarn test:ci
+              run: test:unit:ci
             - name: Upload coverage to Codecov
               uses: codecov/codecov-action@v4
               with:
                   token: ${{ secrets.CODECOV_TOKEN }}
-            - name: Run build script
-              run: yarn build
             - name: Install Playwright Browsers
               run: npx playwright install --with-deps
             - name: Run Playwright tests
-              run: |
-                  yarn build:e2e
-                  npx playwright test
+              run: yarn test:e2e
             - uses: actions/upload-artifact@v4
               if: ${{ !cancelled() }}
               with:
