--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,7 @@ jobs:
             - name: Run build
               run: yarn build
             - name: Run unit tests
-              run: test:unit:ci
+              run: yarn test:unit:ci
             - name: Upload coverage to Codecov
               uses: codecov/codecov-action@v4
               with:
